--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   google_maps_flutter: ^2.4.0
   geocoding: ^2.1.0
   geolocator: ^10.0.0
+  uuid: ^3.0.7
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
